--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "google-generativeai>=0.8.5",
+    "google-genai>=1.49.0",
     "pydantic>=2.12.4",
 ]
